# vm-bills-rec

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg_rf.txt
src/utils/: testFunctions.cpp
